src/components/text-input/_text-input.scss
//-----------------------------
// Text
//-----------------------------

@import '../../globals/scss/vars';
@import '../../globals/scss/theme';
@import '../../globals/scss/colors';
@import '../../globals/scss/css--reset';
@import '../../globals/scss/helper-mixins';
@import '../../globals/scss/typography';
@import '../../globals/scss/spacing';
@import '../../globals/scss/import-once';
@import '../form/form';

@include exports('text-input') {
  .#{$prefix}--text-input {
    @include reset;
    @include font-family;
    @include typescale('zeta');
    display: block;
    width: 100%;
    height: rem(40px);
    min-width: rem(300px);
    padding: 0 $spacing-md;
    color: $text-01;
    background-color: $field-01;
    border: none;
    box-shadow: 0 1px 0 0 $ui-05;
    order: 2;
    border-bottom: 1px solid transparent;

    & ~ .#{$prefix}--label {
      order: 1;
    }

    &::placeholder {
      @include placeholder-colors;
    }

    &:focus {
      outline: none;
      box-shadow: 0 2px 0 0 $brand-01;
    }

    &[data-invalid],
    &[data-invalid]:focus {
      box-shadow: 0 2px 0 0 $support-01;
    }

    &:focus ~ .#{$prefix}--label {
      color: $brand-01;
    }

    &[data-invalid]:focus + .#{$prefix}--label {
      color: $support-01;
    }

    &:disabled {
      opacity: 0.5;
      cursor: not-allowed;
    }

    &:disabled:hover {
      border: none;
    }

    & ~ .#{$prefix}--form-requirement {
      order: 3;
      color: $support-01;
      font-weight: 400;
      margin-top: $spacing-2xs;

      &::before {
        display: none;
      }
    }

    &[data-toggle-password-visibility] + .#{$prefix}--text-input--password__visibility {
      position: relative;
      top: rem(-40px);
      align-self: flex-end;
      display: flex;
      justify-content: center;
      align-items: center;
      order: 3;
      height: rem(40px);
      width: rem(40px);
      padding: 0;
      border: 0;
      background: none;
      cursor: pointer;
      outline: inherit;

      svg {
        fill: $brand-01;

        &:hover {
          fill: $hover-primary;
        }
      }
    }
  }

  .#{$prefix}--text-input--light {
    background-color: $field-02;
  }

  // Skeleton State
  .#{$prefix}--text-input.#{$prefix}--skeleton {
    @include skeleton;
    width: 100%;

    &::-webkit-input-placeholder {
      color: transparent;
    }
  }
}

